@@ -64,7 +64,11 @@ the syslog priority (severity and facility) to the log file</a></li>
 syslog sender over NAT</a> (online only)</li>
 <li><a href="gssapi.html">an overview and howto of rsyslog gssapi support</a></li>
 <li><a href="debug.html">debug support in rsyslog</a></li>
-<li><a href="dev_queue.html">the rsyslog message queue object (developer's view)</a></li>
+<li>Developer Documentation
+  <ul>
+  <li><a href="dev_oplugins.html">writing rsyslog output plugins</a></li>
+  <li><a href="dev_queue.html">the rsyslog message queue object (developer's view)</a></li>
+  </ul></li>
 </ul>
 <p>Our <a href="history.html">rsyslog history</a>
 page is for you if you would like to learn a little more
