@@ -39,6 +39,7 @@ Version 4.1.6  [DEVEL] (rgerhards), 2009-03-??
 - added a new way how output plugins may be passed parameters. This is
   more effcient for some outputs. They new can receive fields not only
   as a single string but rather in an array where each string is seperated.
+- added (some) developer documentation for output plugin interface
 ---------------------------------------------------------------------------
 Version 4.1.5  [DEVEL] (rgerhards), 2009-03-11
 - bugfix: parser did not correctly parse fields in UDP-received messages
